# fintaichi

./: .gitignore  LICENSE  gitignore  pyproject.toml  readme.md  tutorial-01knapsack.md  tutorial.md
fintaichi/: inv_square.py
fintaichi/dp_appliaction/: BJ.py  dp_taichi.py  knapsack_acc.py
physicssim/: BJ.py  helloworld.py
taichi-lang-finapp/: dp_python.py  dp_taichi.py  redball.py  xulivedemo.py
taichi-lang-finapp/physicssimulation/: xutest.py
tests/: test_knapsack.py  test_physicssim.py  test_sumsquare.py  test_twoloop_acc.py
