[tool.poetry]
name = "taichi-lang-finapp"
version = "0.1.0"
description = ""
authors = ["chenxu10 <shenxu2011@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<3.11"
taichi = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
